@@ -8,6 +8,8 @@ monitoring with stalled data streams still eats cpu like the cookie monster
 Planned for 0.2.7:
 ==================
 
+support 8 bit u-law format data
+
 reorganize source files into esdlib, esd, utils subdirectories.
 
 free samples when client closes
